--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MyPortfolio</title>
+  <title>Casey Kang Photography</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -73,7 +73,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">Casey Kang Photography</a>
 
       <!-- <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -107,104 +107,66 @@
           <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".web">Web</a>
-              <a href="#" data-filter=".design">Design</a>
-              <a href="#" data-filter=".branding">Branding</a>
-              <a href="#" data-filter=".photography">Photography</a>
+              <a href="#" data-filter=".family">Family</a>
+              <a href="#" data-filter=".couples">Couples</a>
+              <a href="#" data-filter=".individual">Individual</a>
+              <a href="#" data-filter=".scenic">Scenic</a>
+              <a href="#" data-filter=".pet">Pet</a>
             </div>
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Boxed Water</h3>
-                <span>Web</span>
-              </div>
-              <img class="img-fluid" src="img/img_1.jpg">
-            </a>
+          <!-- Row 1 -->
+          <div class="item pet col-sm-6 col-md-4 col-lg-4 mb-4">
+            <div class="item-wrap fancybox">
+              <img class="img-fluid" src="img/img1.jpg">
+            </div>
+          </div>
+          <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
+            <div class="item-wrap fancybox">
+              <img class="img-fluid" src="img/img2.jpg">
+            </div>
+          </div>
+          <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
+            <div class="item-wrap fancybox">
+              <img class="img-fluid" src="img/img3.jpg">
+            </div>
+          </div>
+          <!-- Row 2 -->
+          <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
+            <div class="item-wrap fancybox">
+              <img class="img-fluid" src="img/img4.jpg">
+            </div>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Build Indoo</h3>
-                <span>Photography</span>
-              </div>
-              <img class="img-fluid" src="img/img_2.jpg">
-            </a>
+            <div class="item-wrap fancybox">
+              <img class="img-fluid" src="img/img6.jpg">
+            </div>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Cocooil</h3>
-                <span>Branding</span>
-              </div>
-              <img class="img-fluid" src="img/img_3.jpg">
-            </a>
+          <div class="item scenic col-sm-6 col-md-4 col-lg-4 mb-4">
+            <div class="item-wrap fancybox">
+              <img class="img-fluid" src="img/img5.jpg">
+            </div>
           </div>
-          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Nike Shoe</h3>
-                <span>Design</span>
-              </div>
-              <img class="img-fluid" src="img/img_4.jpg">
-            </a>
+          <!-- Row 3-->
+          <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
+            <div class="item-wrap fancybox">
+              <img class="img-fluid" src="img/img7.jpg">
+            </div>
           </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Kitchen Sink</h3>
-                <span>Photography</span>
-              </div>
-              <img class="img-fluid" src="img/img_5.jpg">
-            </a>
+          <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
+            <div class="item-wrap fancybox">
+              <img class="img-fluid" src="img/img8.jpg">
+            </div>
           </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="work-single.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Amazon</h3>
-                <span>brandingn</span>
-              </div>
-              <img class="img-fluid" src="img/img_6.jpg">
-            </a>
+          <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
+            <div class="item-wrap fancybox">
+              <img class="img-fluid" src="img/img9.jpg">
+            </div>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- <div class="site-section">
-      <div class="container">
-        <div class="row justify-content-center text-center mb-4">
-          <div class="col-5">
-            <h3 class="h3 heading">My Clients</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="img/logo-adobe.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="img/logo-uber.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="img/logo-apple.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="img/logo-netflix.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="img/logo-nike.png" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-4 col-sm-4 col-md-2">
-            <a href="#" class="client-logo"><img src="img/logo-google.png" alt="Image" class="img-fluid"></a>
-          </div>
-
-        </div>
-      </div>
-    </div> -->
-
 
     <div class="site-section">
       <div class="container">
@@ -218,7 +180,7 @@
 
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-cube la-3x mb-4"></span>
-            <h4 class="h4 mb-2">Web Design</h4>
+            <h4 class="h4 mb-2">General Session</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
             <ul class="list-unstyled list-line">
               <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
@@ -230,7 +192,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-mobile la-3x mb-4"></span>
-            <h4 class="h4 mb-2">Mobile Applications</h4>
+            <h4 class="h4 mb-2">Engagement Session</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
             <ul class="list-unstyled list-line">
               <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
@@ -242,7 +204,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-image la-3x mb-4"></span>
-            <h4 class="h4 mb-2">Graphic Design</h4>
+            <h4 class="h4 mb-2">Mini Session</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
             <ul class="list-unstyled list-line">
               <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
@@ -254,7 +216,7 @@
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <span class="la la-search la-3x mb-4"></span>
-            <h4 class="h4 mb-2">SEO</h4>
+            <h4 class="h4 mb-2">Turn Around Time</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
             <ul class="list-unstyled list-line">
               <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
