--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Services - MyPortfolio</title>
+  <title>Services - Casey Kang Photography</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -71,7 +71,7 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">MyPortfolio.</a>
+      <a class="navbar-brand" href="index.html">Casey Kang Photography</a>
 
       <!-- <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
         <span></span>
@@ -119,7 +119,7 @@
 
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <span class="la la-cube la-3x mb-4"></span>
-              <h4 class="h4 mb-2">Web Design</h4>
+              <h4 class="h4 mb-2">General Session</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
               <ul class="list-unstyled list-line">
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
@@ -131,7 +131,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <span class="la la-mobile la-3x mb-4"></span>
-              <h4 class="h4 mb-2">Mobile Applications</h4>
+              <h4 class="h4 mb-2">Engagement Session</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
               <ul class="list-unstyled list-line">
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
@@ -143,7 +143,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
               <span class="la la-image la-3x mb-4"></span>
-              <h4 class="h4 mb-2">Graphic Design</h4>
+              <h4 class="h4 mb-2">Mini Session</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
               <ul class="list-unstyled list-line">
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
@@ -155,7 +155,7 @@
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <span class="la la-search la-3x mb-4"></span>
-              <h4 class="h4 mb-2">SEO</h4>
+              <h4 class="h4 mb-2">Turn Around Time</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
               <ul class="list-unstyled list-line">
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
