--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 
     <div class="site-section">
       <div class="container">
-        <div class="row justify-content-center text-center mb-4">
-          <div class="col-5">
+        <div class="row justify-content-center text-left text-md-center mb-4">
+          <div class="col-md-5">
             <h3 class="h3 heading">My Services</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
           </div>
