--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="row">
 
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <span class="la la-cube la-3x mb-4"></span>
+            <span class="la la-camera la-3x mb-4"></span>
             <h4 class="h4 mb-2">General Session</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
             <ul class="list-unstyled list-line">
@@ -191,7 +191,7 @@
             </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <span class="la la-mobile la-3x mb-4"></span>
+            <span class="la la-diamond la-3x mb-4"></span>
             <h4 class="h4 mb-2">Engagement Session</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
             <ul class="list-unstyled list-line">
@@ -215,7 +215,7 @@
             </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
-            <span class="la la-search la-3x mb-4"></span>
+            <span class="la la-clock la-3x mb-4"></span>
             <h4 class="h4 mb-2">Turn Around Time</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
             <ul class="list-unstyled list-line">
