--- a/services.html
+++ b/services.html
@@ -118,7 +118,7 @@
           <div class="row">
 
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-              <span class="la la-cube la-3x mb-4"></span>
+              <span class="la la-camera la-3x mb-4"></span>
               <h4 class="h4 mb-2">General Session</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
               <ul class="list-unstyled list-line">
@@ -130,7 +130,7 @@
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-              <span class="la la-mobile la-3x mb-4"></span>
+              <span class="la la-diamond la-3x mb-4"></span>
               <h4 class="h4 mb-2">Engagement Session</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
               <ul class="list-unstyled list-line">
@@ -154,7 +154,7 @@
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-6 col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-              <span class="la la-search la-3x mb-4"></span>
+              <span class="la la-clock la-3x mb-4"></span>
               <h4 class="h4 mb-2">Turn Around Time</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit explicabo inventore.</p>
               <ul class="list-unstyled list-line">
