--- a/gallery.html
+++ b/gallery.html
@@ -221,7 +221,7 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="#"><span class="icofont-instagram"></span></a>
+          <a href="https://www.instagram.com/caseykangphoto/"><span class="icofont-instagram"></span></a>
           <a href="#"><span class="icofont-twitter"></span></a>
           <a href="#"><span class="icofont-facebook"></span></a>
           <!-- <a href="#"><span class="icofont-behance"></span></a> -->
