--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="services.html">Services</a>
-          <a href="gallery.html">Gallery</a>
+          <!-- <a href="gallery.html">Gallery</a> -->
           <a href="contact.html">Contact</a>
         </div>
       </div>
@@ -104,7 +104,7 @@
             <h2>Hey, I'm Casey Kang</h2>
             <p class="mb-0">Professional Photographer</p>
           </div>
-          <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
               <a href="#" data-filter="*" class="active">All</a>
               <a href="#" data-filter=".family">Family</a>
@@ -113,56 +113,56 @@
               <a href="#" data-filter=".scenic">Scenic</a>
               <a href="#" data-filter=".pet">Pet</a>
             </div>
-          </div>
+          </div> -->
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <!-- Row 1 -->
           <div class="item pet col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
+            <a href="gallery1.html" class="item-wrap fancybox">
               <img class="img-fluid" src="img/img1.jpg">
-            </div>
+            </a>
           </div>
           <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img2.jpg">
-            </div>
+              <a href="gallery4.html" class="item-wrap fancybox">
+                <img class="img-fluid" src="img/img2.jpg">
+              </a>
           </div>
           <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
+            <a href="gallery3.html" class="item-wrap fancybox">
               <img class="img-fluid" src="img/img3.jpg">
-            </div>
+            </a>
           </div>
           <!-- Row 2 -->
           <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img4.jpg">
-            </div>
+              <a href="gallery2.html" class="item-wrap fancybox">
+                <img class="img-fluid" src="img/img4.jpg">
+              </a>
           </div>
           <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
+            <a href="gallery4.html" class="item-wrap fancybox">
               <img class="img-fluid" src="img/img6.jpg">
-            </div>
+            </a>
           </div>
           <div class="item scenic col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img5.jpg">
-            </div>
+            <a href="gallery5.html" class="item-wrap fancybox">
+            <img class="img-fluid" src="img/img5.jpg">
+            </a>
           </div>
           <!-- Row 3-->
           <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
+            <a href="gallery4.html" class="item-wrap fancybox">
               <img class="img-fluid" src="img/img7.jpg">
-            </div>
+            </a>
           </div>
           <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
+            <a href="gallery2.html" class="item-wrap fancybox">
               <img class="img-fluid" src="img/img8.jpg">
-            </div>
+            </a>
           </div>
           <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
+            <a href="gallery3.html" class="item-wrap fancybox">
               <img class="img-fluid" src="img/img9.jpg">
-            </div>
+            </a>
           </div>
         </div>
       </div>
