--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="services.html">Services</a>
-          <a href="gallery.html">Gallery</a>
+          <!-- <a href="gallery.html">Gallery</a> -->
           <a href="contact.html">Contact</a>
         </div>
       </div>
