--- a/gallery1.html
+++ b/gallery1.html
@@ -103,8 +103,9 @@
         <div class="row mb-5 align-items-end">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2>Gallery 1</h2>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-              officiis explicabo inventore.</p>
+            <p class="mb-0">
+              Wedding
+            </p>
           </div>
           <!-- <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
@@ -118,56 +119,59 @@
           </div> -->
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <!-- Row 1 -->
-          <div class="item pet col-sm-6 col-md-4 col-lg-4 mb-4">
+          
+          <div class="item col-sm-10 mb-4">
             <div>
-              <img class="img-fluid" src="img/img1.jpg">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=12rCPDNFVmuPJEtrPWXkkx5gzGrmjOiJk" />
             </div>
           </div>
-          <!-- <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img2.jpg">
+           <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1yEdJOyW2vWDhv-3IdKqadM9sgnRGf-RM" />
             </div>
           </div>
-          <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img3.jpg">
-            </div>
-          </div> -->
-          <!-- Row 2 -->
-          <!-- <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img4.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1Eg_B8AV3EuihR9K-mPV5YetRdSQ3rvkE" />
             </div>
           </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img6.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1WjLH3rAkxrGIf4HiVtf4AJ4JR5TEXGqy" />
             </div>
           </div>
-          <div class="item scenic col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img5.jpg">
-            </div>
-          </div> -->
-          <!-- Row 3-->
-          <!-- <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img7.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1-L0jQQfHRPdQEGOuhs8jco_fhcplj2w0" />
             </div>
           </div>
-          <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img8.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1PLlVCmCiKlS708Bd9ZK39z--h_UKNbDa" />
             </div>
           </div>
-          <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img9.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=11vzGPpqZGzyEFYqDuF5wnXVo2DsBFFhk" />
             </div>
-          </div> -->
-        </div>
+          </div>
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1IV8-d-RA-oDlY1oGNH7bC5SI6wishbaU" />
+            </div>
+          </div>
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1XwXBwuiMRgDfC9UshJvlIGPAiwEbKGdU" />
+            </div>
+          </div>
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1LoWNThad0wLKEg9uhSRcr8aZjVmYbWJI" />
+            </div>
+          </div>
 
+        </div>
       </div>
     </div>
 
