--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <!-- Row 1 -->
           <div class="item pet col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="gallery1.html" class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img1.jpg">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=12rCPDNFVmuPJEtrPWXkkx5gzGrmjOiJk" />
             </a>
           </div>
           <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -155,8 +155,8 @@
             </a>
           </div>
           <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="gallery2.html" class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img8.jpg">
+            <a href="gallery1.html" class="item-wrap fancybox">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1XwXBwuiMRgDfC9UshJvlIGPAiwEbKGdU" />
             </a>
           </div>
           <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
