--- a/gallery6.html
+++ b/gallery6.html
@@ -223,9 +223,7 @@
         </div>
         <div class="col-sm-6 social text-md-right">
           <a href="https://www.instagram.com/caseykangphoto/"><span class="icofont-instagram"></span></a>
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <!-- <a href="#"><span class="icofont-behance"></span></a> -->
+          <a href="https://www.facebook.com/CaseyKangPhotography/"><span class="icofont-facebook"></span></a>
         </div>
       </div>
     </div>
