--- a/index.html
+++ b/index.html
@@ -278,10 +278,8 @@
           </div>
         </div>
         <div class="col-sm-6 social text-md-right">
-          <a href="https://www.instagram.com/caseykangphoto/"><span class="icofont-instagram"></span></a>
-          <a href="#"><span class="icofont-twitter"></span></a>
-          <a href="#"><span class="icofont-facebook"></span></a>
-          <!-- <a href="#"><span class="icofont-behance"></span></a> -->
+          <a href="https://www.instagram.com/caseykangphoto/"><span class="icofont-instagram"></span></a>         
+          <a href="https://www.facebook.com/CaseyKangPhotography/"><span class="icofont-facebook"></span></a>
         </div>
       </div>
     </div>
