--- a/gallery5.html
+++ b/gallery5.html
@@ -38,46 +38,9 @@
 
 <body>
 
-<!-- 
-  <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
-    <div class="container py-2 py-md-5">
-      <div class="row align-items-start">
-        <div class="col-md-2">
-          <ul class="custom-menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li class="active"><a href="works.html">Works</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-        <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                  officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
-        </div>
-      </div>
-
-    </div>
-  </div> -->
-
-
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html">Casey Kang Photography</a>
-
-      <!-- <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
-        <span></span>
-      </a> -->
 
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn burger" onclick="closeNav()">&times;</a>
@@ -85,7 +48,6 @@
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="services.html">Services</a>
-          <!-- <a href="gallery.html">Gallery</a> -->
           <a href="contact.html">Contact</a>
         </div>
       </div>
@@ -94,7 +56,6 @@
 
     </div>
   </nav>
-
 
   <main id="main">
 
@@ -107,110 +68,70 @@
               Engagement
             </p>
           </div>
-          <!-- <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
-            <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".family">Family</a>
-              <a href="#" data-filter=".couples">Couples</a>
-              <a href="#" data-filter=".individual">Individual</a>
-              <a href="#" data-filter=".scenic">Scenic</a>
-              <a href="#" data-filter=".pet">Pet</a>
-            </div>
-          </div> -->
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <!-- Row 1 -->
-          <div class="item pet col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item col-sm-10 mb-4">
             <div>
-              <img class="img-fluid" src="img/img5.jpg">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1uGlcr31DbfQ1GldTpScYTkMo41UJb3cx" />
             </div>
           </div>
-          <!-- <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img9.jpg">
-            </div>
-          </div> -->
-          <!-- <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img3.jpg">
-            </div>
-          </div> -->
-          <!-- Row 2 -->
-          <!-- <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img4.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1VI0ExAVsEzJCRxhIG4yFTDFcTEvA5NXq" />
             </div>
           </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img6.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1DtaK2ygHz-_zNW-zF3RAEd3Wydu_0czw" />
             </div>
           </div>
-          <div class="item scenic col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img5.jpg">
-            </div>
-          </div> -->
-          <!-- Row 3-->
-          <!-- <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img7.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=12ajqI1bm5fvIVpkFd7Fp97DRSemcI-CW" />
             </div>
           </div>
-          <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img8.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1SW03lZgi6XwaNpZHP1ASRCSAWyru9G8T" />
             </div>
           </div>
-          <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img9.jpg">
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1TgyucrqjQ8IGu-ThYM_7nAuvfTCGuS9N" />
             </div>
-          </div> -->
+          </div>
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1ZEO4gEK8qlCMSf-1IL-dlCPQmq_-CrEg" />
+            </div>
+          </div>
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1A36Cx_zKYz0Rm1U2e97ruUMjrnvvrGiu" />
+            </div>
+          </div>
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1iUJWa1F28lak26OZONO38LAeC2-yoq1U" />
+            </div>
+          </div>
+          <div class="item col-sm-10 mb-4">
+            <div>
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1kpxBHuJAbPfXKhdm1-x2op9kkFzriC2G" />
+            </div>
+          </div>
         </div>
 
       </div>
     </div>
 
-
-    <!-- <div class="site-section">
-      <div class="container">
-
-        <div class="owl-carousel testimonial-carousel">
-
-          <div class="testimonial-wrap">
-            <div class="testimonial">
-              <img src="img/person_1.jpg" alt="Image" class="img-fluid">
-              <blockquote>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                  explicabo inventore.</p>
-              </blockquote>
-              <p>&mdash; Jean Hicks</p>
-            </div>
-          </div>
-
-          <div class="testimonial-wrap">
-            <div class="testimonial">
-              <img src="img/person_2.jpg" alt="Image" class="img-fluid">
-              <blockquote>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                  explicabo inventore.</p>
-              </blockquote>
-              <p>&mdash; Chris Stanworth</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </div> -->
   </main>
 
   <footer class="footer" role="contentinfo">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright Casey Kang Photography All Rights Reserved</p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
