--- a/index.html
+++ b/index.html
@@ -38,46 +38,9 @@
 
 <body>
 
-  <!-- <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
-    <div class="container py-2 py-md-5">
-      <div class="row align-items-start">
-        <div class="col-md-2">
-          <ul class="custom-menu">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="works.html">Works</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-        <div class="col-md-6 d-none d-md-block  mr-auto">
-          <div class="tweet d-flex">
-            <span class="icofont-twitter text-white mt-2 mr-3"></span>
-            <div>
-              <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
-                  officiis explicabo inventore. <br> <a href="#">t.co/v82jsk</a></em></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 d-none d-md-block">
-          <h3>Hire Me</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-            explicabo inventore. <br> <a href="#">myemail@gmail.com</a></p>
-        </div>
-      </div>
-
-    </div>
-  </div> -->
-
-
-
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html">Casey Kang Photography</a>
-
-      <!-- <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
-        <span></span>
-      </a> -->
 
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn burger" onclick="closeNav()">&times;</a>
@@ -104,66 +67,56 @@
             <h2>Hey, I'm Casey Kang</h2>
             <p class="mb-0">Professional Photographer</p>
           </div>
-          <!-- <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
-            <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".family">Family</a>
-              <a href="#" data-filter=".couples">Couples</a>
-              <a href="#" data-filter=".individual">Individual</a>
-              <a href="#" data-filter=".scenic">Scenic</a>
-              <a href="#" data-filter=".pet">Pet</a>
-            </div>
-          </div> -->
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <!-- Row 1 -->
-          <div class="item pet col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="gallery1.html" class="item-wrap fancybox">
               <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=12rCPDNFVmuPJEtrPWXkkx5gzGrmjOiJk" />
             </a>
           </div>
-          <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="gallery4.html" class="item-wrap fancybox">
-                <img class="img-fluid" src="img/img2.jpg">
+          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="gallery2.html" class="item-wrap fancybox">
+                <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1Q7IhtOHjJTVU7qqgWnX6bYRtdS9cHmkf" />
               </a>
           </div>
-          <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="gallery3.html" class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img3.jpg">
+          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="gallery5.html" class="item-wrap fancybox">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1SW03lZgi6XwaNpZHP1ASRCSAWyru9G8T" />
             </a>
           </div>
           <!-- Row 2 -->
-          <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="gallery2.html" class="item-wrap fancybox">
-                <img class="img-fluid" src="img/img4.jpg">
-              </a>
-          </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="gallery4.html" class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img6.jpg">
-            </a>
-          </div>
-          <div class="item scenic col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="gallery5.html" class="item-wrap fancybox">
-            <img class="img-fluid" src="img/img5.jpg">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1A36Cx_zKYz0Rm1U2e97ruUMjrnvvrGiu" />
             </a>
           </div>
-          <!-- Row 3-->
-          <div class="item family col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="gallery4.html" class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img7.jpg">
-            </a>
-          </div>
-          <div class="item couples col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="gallery1.html" class="item-wrap fancybox">
               <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1XwXBwuiMRgDfC9UshJvlIGPAiwEbKGdU" />
             </a>
           </div>
-          <div class="item individual col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="gallery3.html" class="item-wrap fancybox">
-              <img class="img-fluid" src="img/img9.jpg">
+          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="gallery2.html" class="item-wrap fancybox">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1S-m9-vItloIo1F6gU-hb4ZWFthLQ1ljw" />
             </a>
           </div>
+          <!-- Row 3-->
+          <!-- <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="gallery5.html" class="item-wrap fancybox">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1A36Cx_zKYz0Rm1U2e97ruUMjrnvvrGiu" />
+            </a>
+          </div>
+          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="gallery1.html" class="item-wrap fancybox">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1XwXBwuiMRgDfC9UshJvlIGPAiwEbKGdU" />
+            </a>
+          </div>
+          <div class="item col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="gallery2.html" class="item-wrap fancybox">
+              <img class="img-fluid" src="https://drive.google.com/uc?export=view&id=1S-m9-vItloIo1F6gU-hb4ZWFthLQ1ljw" />
+            </a>
+          </div> -->
         </div>
       </div>
     </div>
@@ -266,7 +219,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+          <p class="mb-1">&copy; Copyright Casey Kang Photography All Rights Reserved</p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
